Pure White shader with ACES OCIO configuration #85694

Closed
opened 2021-02-16 12:23:55 +01:00 by J-P Busse · 6 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-16 01:44, hash: 4a784f32fe
Worked: I guess everything before the OCIO 2.0 update

Short description of error
Plugging a texture into the Roughness socket (color space setting on the node doesn't matter) on a principled BSDF Node using the ACES 1.2 OCIO configuration results in a pure white shader. Plugin it into the base color socket shows the texture correct. This only occurs with Cycles, Eevee renders the shader correct. It also doesn't matter if its rendered using CPU or GPU.

01.png
02.png
03.png

Exact steps for others to reproduce the error

  • Open Blender with an ACES 1.2 OCIO configuration from https://github.com/colour-science/OpenColorIO-Configs/releases
  • Delete the cube
  • Add a Plane
  • import a B/W roughness map (and change the Color Space to Utility - Raw)
  • plug the Texture into the Roughness input on the Principled BSDF Node
  • with Eevee everything looks normal as it should
  • switch to Cycles and the shader becomes pure white
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-16 01:44, hash: `4a784f32fe` Worked: I guess everything before the OCIO 2.0 update **Short description of error** Plugging a texture into the Roughness socket (color space setting on the node doesn't matter) on a principled BSDF Node using the ACES 1.2 OCIO configuration results in a pure white shader. Plugin it into the base color socket shows the texture correct. This only occurs with Cycles, Eevee renders the shader correct. It also doesn't matter if its rendered using CPU or GPU. ![01.png](https://archive.blender.org/developer/F9807975/01.png) ![02.png](https://archive.blender.org/developer/F9807977/02.png) ![03.png](https://archive.blender.org/developer/F9807996/03.png) **Exact steps for others to reproduce the error** - Open Blender with an ACES 1.2 OCIO configuration from https://github.com/colour-science/OpenColorIO-Configs/releases - Delete the cube - Add a Plane - import a B/W roughness map (and change the Color Space to Utility - Raw) - plug the Texture into the Roughness input on the Principled BSDF Node - with Eevee everything looks normal as it should - switch to Cycles and the shader becomes pure white
Author

Added subscriber: @Jan-PhilipBusse

Added subscriber: @Jan-PhilipBusse
priyaescort43 commented 2021-02-16 12:59:35 +01:00 (Migrated from localhost:3001)

Added subscriber: @priyaescort43

Added subscriber: @priyaescort43
priyaescort43 commented 2021-02-16 12:59:35 +01:00 (Migrated from localhost:3001)

This comment was removed by @priyaescort43

*This comment was removed by @priyaescort43*

Added subscriber: @dfelinto

Added subscriber: @dfelinto

This issue was referenced by 351d8bfc41

This issue was referenced by 351d8bfc41a7ab983a20a1843dec550c9b198a38

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-02-17 16:27:04 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85694
No description provided.