Fix T85694: Cycles incorrect grayscale conversion with some OpenColorIO configs